Fix width being a tiny bit too large.

--- a/spencersuperstylesheet.css
+++ b/spencersuperstylesheet.css
@@ -24,6 +24,7 @@ body {
     padding-top: 160px;
     padding-left: 120px;
     padding-right: 120px;
+    overflow-x: hidden;
     font-family: 'Nunito Sans', sans-serif;
     background: linear-gradient(to bottom, #cee7ff, #ffffff);
 }
